<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/dobropojal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="70dp"
        android:text="@string/dobro"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/registr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/vypolnite"
        android:textColor="@color/white"
        android:textFontWeight="@integer/material_motion_duration_long_1"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vhod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="350dp"
        android:text="@string/vhod"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="41dp">

        <EditText
            android:id="@+id/pochta"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/vveditepochtu"
            android:paddingStart="12sp"
            android:background="@drawable/buttoncorners"
            android:backgroundTint="@color/white"
            />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

>
    <EditText
        android:inputType="textPassword"
    android:id="@+id/edit_parol"
    android:layout_width="300dp"
    android:layout_height="48dp"
    android:layout_marginVertical="10dp"
    android:paddingStart="12sp"
    android:background="@drawable/buttoncorners"
    android:backgroundTint="@color/white"
    android:hint="@string/vvedite_parol"/>
</com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/voyti"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/gray"
            android:text="@string/voity"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/password_zabyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="91dp"
            android:backgroundTint="@color/prozrach"
            android:gravity="top"
            android:minHeight="48dp"
            android:text="@string/zabyli_parol"
            android:textSize="11sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>